--- a/src/libsync/CMakeLists.txt
+++ b/src/libsync/CMakeLists.txt
@@ -64,6 +64,7 @@ set(libsync_SRCS
     utility.cpp
     ownsql.cpp
     transmissionchecksumvalidator.cpp
+    excludedfiles.cpp
     creds/dummycredentials.cpp
     creds/abstractcredentials.cpp
     creds/credentialscommon.cpp
